final version source code

--- a/CBIR for mushroom classification.ipynb
+++ b/CBIR for mushroom classification.ipynb
@@ -30,7 +30,7 @@
       },
       "source": [
         "# **CBIR for mushroom classification**\r\n",
-        "## Anton Aba Varela\r\n",
+        "## Antón Aba Varela\r\n",
         "## Arturo Pinar Adán\r\n",
         "## Nacho Regaña Muñoz\r\n",
         "\r\n"
@@ -56,7 +56,7 @@
         "The dataset used contains some families of mushrooms. For each family of mushroom (represented in the name of a folder) some different images of mushrooms of the same family are presented. \r\n",
         "The complete dataset can be found at: https://www.kaggle.com/maysee/mushrooms-classification-common-genuss-images\r\n",
         "\r\n",
-        "However, for simplicity in performance and time, a small dataset have been chosen contained in the folder *data* of this repository. (Link:     ). \r\n",
+        "However, for simplicity in performance and time, a small dataset have been chosen contained in the folder *data* of this repository. (Link: https://github.com/ArturoPinar/CBIR-for-Mushroom-Classification/tree/main/data/MushroomsReduced). \r\n",
         "\r\n",
         "In the following cell the implementation on how the dataset is loaded as well as preprocessed is presented. \r\n",
         "\r\n",
@@ -205,7 +205,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,7 +304,7 @@
         "    hlbp /= (hlbp.sum() + eps)\r\n",
         "    return hlbp\r\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +341,7 @@
         "    indexImgTexture += 1\r\n",
         "  indexImgTexture = 0\r\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -420,7 +420,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -470,7 +470,7 @@
         "\r\n",
         "    return scoredResultsTexture"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,6 +496,9 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "wHgeaAwVMYP_"
       },
       "source": [
